# toolkitty

./: LICENSE  README.md  eslint.config.js  jest.config.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: build.yaml  javascript.yaml  rust.yaml
scripts/: peer.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  blobs.rs  extensions.rs  key_store.rs  keystore.rs  lib.rs  main.rs  messages.rs  rpc.rs  stream.rs  topic.rs
src-tauri/src/node/: actor.rs  extensions.rs  message.rs  mod.rs  operation.rs  stream.rs
src/components/: CustomCalendar.svelte  TimePicker.svelte  availability-viewer.svelte  availability.svelte  back.svelte  calendar.svelte  deleteDB.svelte  event-form.svelte  event-row.svelte  festival-calendar.svelte  header.svelte  resource-calendar.svelte  select.svelte  space-calendar.svelte  space-row.svelte  time-availability.svelte  time-picker.svelte  toasts.svelte
src/components/dialog/: dialog-content.svelte  index.ts  permissions.svelte  resourceRequest.svelte
src/components/icons/: arrowIcon.svelte  basketIcon.svelte  binIcon.svelte  bubbleIcon.svelte  calendarIcon.svelte  chatBubbleIcon.svelte  checkIcon.svelte  chestIcon.svelte  chevronFilledRightIcon.svelte  chevronIcon.svelte  chevronLeftIcon.svelte  chevronRightIcon.svelte  clockIcon.svelte  crayonIcon.svelte  crossIcon.svelte  dashboardIcon.svelte  dotdotdotIcon.svelte  exclamationIcon.svelte  footstepsIcon.svelte  hideIcon.svelte  houseIcon.svelte  imageIcon.svelte  linkIcon.svelte  lockIcon.svelte  mailIcon.svelte  pinIcon.svelte  plusIcon.svelte  questionIcon.svelte  refreshIcon.svelte  shareIcon.svelte  suitcaseIcon.svelte  ticketIcon.svelte  uploadIcon.svelte  watchIcon.svelte
src/lib/: api.ts  channel.ts  constants.ts  db.ts  lww.ts  processor.ts  promiseMap.ts  promise_map.ts  schemas.ts  state.svelte.ts  timeSpan.ts  toast.svelte.ts  types.ts  utils.ts
src/lib/api/: access.ts  auth.ts  blobs.ts  bookings.ts  calendars.ts  data.ts  dependencies.ts  events.ts  identity.ts  index.ts  inviteCode.ts  inviteCodes.ts  logs.ts  onboarding.ts  publish.ts  requests.ts  resources.ts  roles.ts  spaces.ts  streams.ts  topics.ts  users.ts
src/lib/components/: ActionFormButtons.svelte  AvailabilitySetter.svelte  AvailabilityViewer.svelte  Avatar.svelte  Back.svelte  BookingRequest.svelte  Bookings.svelte  Calendar.svelte  CalendarForm.svelte  CalendarSelector.svelte  Contribute.svelte  Date.svelte  DateRange.svelte  Delete.svelte  Error.svelte  EventForm.svelte  EventRow.svelte  FestivalCalendar.svelte  Header.svelte  ImageGallery.svelte  ImageUploader.svelte  Links.svelte  PageText.svelte  QuestionMark.svelte  RequestToast.svelte  ResourceForm.svelte  Select.svelte  SpaceForm.svelte  TimePicker.svelte  Toasts.svelte  UpcomingBookings.svelte
src/lib/components/dialog/: AccessRequest.svelte  AccessRequestDialog.svelte  AccessRoleDialog.svelte  BookingRequestDialog.svelte  Delete.svelte  DialogContent.svelte  Request.svelte  index.ts
src/lib/components/icons/: ArrowIcon.svelte  CalendarIcon.svelte  ChatBubbleIcon.svelte  CheckIcon.svelte  ChestIcon.svelte  ChevronRightIcon.svelte  ClockIcon.svelte  CrayonIcon.svelte  CrossIcon.svelte  DashboardIcon.svelte  DotsIcon.svelte  FootstepsIcon.svelte  LinkIcon.svelte  LockIcon.svelte  MailIcon.svelte  PinIcon.svelte  QuestionIcon.svelte  RefreshIcon.svelte  TicketIcon.svelte  ToolkittyIcon.svelte  UploadIcon.svelte  basketIcon.svelte  binIcon.svelte  bubbleIcon.svelte  calendarIcon.svelte  chevronFilledRightIcon.svelte  chevronIcon.svelte  chevronLeftIcon.svelte  chevronRightIcon.svelte  clockIcon.svelte  dashboardIcon.svelte  exclamationIcon.svelte  footstepsIcon.svelte  hideIcon.svelte  imageIcon.svelte  linkIcon.svelte  lockIcon.svelte  mailIcon.svelte  pinIcon.svelte  plusIcon.svelte  (+3 more)
src/lib/components/iconsss/: ChestIcon.svelte  HouseIcon.svelte  WatchIcon.svelte
src/lib/components/inputs/: DatePicker.svelte
src/lib/utils/: createDatesArray.ts  data.ts  faker.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(unauthed)/: +layout.svelte  +page.svelte  +page.ts
src/routes/(unauthed)/create/: +page.svelte  +page.ts
src/routes/(unauthed)/help/: +page.svelte
src/routes/(unauthed)/join/: +page.svelte  +page.ts
src/routes/(unauthed)/request/: +page.svelte  +page.ts
src/routes/app/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  page.svelte
src/routes/app/admin/: +page.svelte  +page.ts  RequestDialog.svelte
src/routes/app/availability-test/: +page.svelte
src/routes/app/dashboard/: +page.svelte  +page.ts  RequestDialog.svelte
src/routes/app/events/: +page.svelte  +page.ts  EventForm.svelte
src/routes/app/home/: +page.svelte
src/routes/app/resources/: +page.svelte  +page.ts  ResourceForm.svelte
src/routes/app/spaces/: +page.svelte  +page.ts  (+1 more)
src/routes/create/: +page.svelte
src/routes/join/: +page.svelte
tests/: data.ts
tests/api/: access.test.ts  auth.test.ts  booking.test.ts  bookingTimespan.test.ts  calendar.test.ts  data.ts  dependencies.test.ts  faker.ts  outOfOrder.test.ts  timespanFilter.test.ts
(+40 files in other folders)
